--- a/gallery.html
+++ b/gallery.html
@@ -320,7 +320,7 @@
   </footer>
   
   
-  <script src="gallery.js"></script>
-  <script src="script.js"></script>
+  <script src="script/gallery.js"></script>
+  <script src="script/script.js"></script>
 </body>
 </html>
