--- a/policies.html
+++ b/policies.html
@@ -154,7 +154,7 @@
 
     <!-- inquire starts -->
     <section class="py-8 sm:py-14">
-      <div class="py-6 px-3 mx-auto md:max-w-7xl bg-neutral-200 shadow-sm rounded-3xl">
+      <div class="py-6 px-3 mx-auto max-w-screen-sm md:max-w-7xl bg-neutral-200 shadow-sm rounded-3xl">
         
 
         <div class="flex">
