--- a/policies.html
+++ b/policies.html
@@ -2,21 +2,10 @@
 <html lang="en">
 <head>
 
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CF7W7L9N61"></script>
-  <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-CF7W7L9N61');
-  </script>
-
-
     <meta name="author" content="Lawrence Katana">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Hour Events - About</title>
+    <title>Happy Hour Events - Policies</title>
   <link href="./output.css" rel="stylesheet">
 
 </head>
@@ -91,8 +80,8 @@
 
   <main class="font-body">
 
-    <section>
-      <div class="container mx-auto">
+    <section class="mx-5">
+      <div class="sm:container sm:mx-auto">
         <div class="py-20">
            <p class="font-title text-3xl pt-10 text-gray-800">Policies</p>
           <section class="pt-10" id="admission">
@@ -154,7 +143,7 @@
 
     <!-- inquire starts -->
     <section class="py-8 sm:py-14">
-      <div class="py-6 px-3 mx-auto max-w-screen-sm md:max-w-7xl bg-neutral-200 shadow-sm rounded-3xl">
+      <div class="py-6 px-3 mx-auto md:max-w-7xl bg-neutral-200 shadow-sm rounded-3xl">
         
 
         <div class="flex">
