--- a/services.html
+++ b/services.html
@@ -24,10 +24,10 @@
         <!-- Nav-links -->
         <div class="hidden lg:flex lg:gap-x-12">
           <a href="index.html" class="font-[500] leading-6 text-gray-800 hover:text-red-800 transition duration-300">Home</a>
-          <a href="services.html" class="font-[500] leading-6 text-gray-800 hover:text-red-800 transition duration-300">Services</a>
+          <a href="services.html" class="selected font-[500] leading-6 text-gray-800 hover:text-red-800 transition duration-300">Services</a>
           <a href="gallery.html" class="font-[500] leading-6 text-gray-800 hover:text-red-800 transition duration-300">Gallery</a>
           <a href="about.html" class="font-[500] leading-6 text-gray-800 hover:text-red-800 transition duration-300">About</a>
-          <a href="contact.html" class="selected font-[500] leading-6 text-gray-800 hover:text-red-800 transition duration-300">Contact</a>
+          <a href="contact.html" class="font-[500] leading-6 text-gray-800 hover:text-red-800 transition duration-300">Contact</a>
         </div><!--Nav-links-ends-->
 
       </div>
@@ -63,10 +63,10 @@
           <div class="-my-6 divide-y divide-gray-500/40">
             <div class="space-y-2 py-6">
               <a href="index.html" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-200">Home</a>
-              <a href="services.html" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-200">Services</a>
+              <a href="services.html" class="selected -mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-200">Services</a>
               <a href="gallery.html" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-200">Gallery</a>
               <a href="about.html" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-200">About</a>
-              <a href="contact.html" class="selected -mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-200">contact</a>
+              <a href="contact.html" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-200">contact</a>
             </div>
             <div class="py-6">
               <div class="book-btn -mx-3 block rounded-lg px-3 py-2.5 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-200 cursor-pointer">Book now</div>
@@ -130,7 +130,7 @@
               </span>
               <div class="flex justify-between">
                 <div>
-                  <button class="book-btn relative min-w-[68px] flex items-center rounded-lg leading-none group px-3 h-8 text-xs text-red-500 hover:bg-rose-300 hover:text-black transition duration-300">
+                  <button class="book-btn relative min-w-[68px] flex items-center rounded-lg leading-none group px-3 h-8 text-xs bg-rose-300 text-black transition duration-300">
                     <span class="mr-1 text-sm">Book Now</span>
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                       <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
@@ -169,7 +169,7 @@
               </span>
               <div class="flex justify-between">
                 <div>
-                  <button class="book-btn relative min-w-[68px] flex items-center rounded-lg leading-none group px-3 h-8 text-xs text-red-500 hover:bg-rose-300 hover:text-black transition duration-300">
+                  <button class="book-btn relative min-w-[68px] flex items-center rounded-lg leading-none group px-3 h-8 text-xs bg-rose-300 text-black transition duration-300">
                     <span class="mr-1 text-sm">Book Now</span>
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                       <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
@@ -207,7 +207,7 @@
               </span>
               <div class="flex justify-between">
                 <div>
-                  <button class="book-btn relative min-w-[68px] flex items-center rounded-lg leading-none group px-3 h-8 text-xs text-red-500 hover:bg-rose-300 hover:text-black transition duration-300">
+                  <button class="book-btn relative min-w-[68px] flex items-center rounded-lg leading-none group px-3 h-8 text-xs bg-rose-300 text-black transition duration-300">
                     <span class="mr-1 text-sm">Book Now</span>
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                       <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
@@ -246,7 +246,7 @@
               </span>
               <div class="flex justify-between">
                 <div>
-                  <button class="book-btn relative min-w-[68px] flex items-center rounded-lg leading-none group px-3 h-8 text-xs text-red-500 hover:bg-rose-300 hover:text-black transition duration-300">
+                  <button class="book-btn relative min-w-[68px] flex items-center rounded-lg leading-none group px-3 h-8 text-xs bg-rose-300 text-black transition duration-300">
                     <span class="mr-1 text-sm">Book Now</span>
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                       <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
@@ -285,7 +285,7 @@
               </span>
               <div class="flex justify-between">
                 <div>
-                  <button class="book-btn relative min-w-[68px] flex items-center rounded-lg leading-none group px-3 h-8 text-xs text-red-500 hover:bg-rose-300 hover:text-black transition duration-300">
+                  <button class="book-btn relative min-w-[68px] flex items-center rounded-lg leading-none group px-3 h-8 text-xs bg-rose-300 text-black transition duration-300">
                     <span class="mr-1 text-sm">Book Now</span>
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                       <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
@@ -319,7 +319,7 @@
               </span>
               <div class="flex justify-between">
                 <div>
-                  <button class="book-btn relative min-w-[68px] flex items-center rounded-lg leading-none group px-3 h-8 text-xs text-red-500 hover:bg-rose-300 hover:text-black transition duration-300">
+                  <button class="book-btn relative min-w-[68px] flex items-center rounded-lg leading-none group px-3 h-8 text-xs bg-rose-300 text-black transition duration-300">
                     <span class="mr-1 text-sm">Book Now</span>
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                       <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
@@ -354,7 +354,7 @@
               </span>
               <div class="flex justify-between">
                 <div>
-                  <button class="book-btn relative min-w-[68px] flex items-center rounded-lg leading-none group px-3 h-8 text-xs text-red-500 hover:bg-rose-300 hover:text-black transition duration-300">
+                  <button class="book-btn relative min-w-[68px] flex items-center rounded-lg leading-none group px-3 h-8 text-xs bg-rose-300 text-black transition duration-300">
                     <span class="mr-1 text-sm">Book Now</span>
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                       <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
@@ -388,7 +388,7 @@
               </span>
               <div class="flex justify-between">
                 <div>
-                  <button class="book-btn relative min-w-[68px] flex items-center rounded-lg leading-none group px-3 h-8 text-xs text-red-500 hover:bg-rose-300 hover:text-black transition duration-300">
+                  <button class="book-btn relative min-w-[68px] flex items-center rounded-lg leading-none group px-3 h-8 text-xs bg-rose-300 text-black transition duration-300">
                     <span class="mr-1 text-sm">Book Now</span>
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                       <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
@@ -421,7 +421,7 @@
               </span>
               <div class="flex justify-between">
                 <div>
-                  <button class="book-btn relative min-w-[68px] flex items-center rounded-lg leading-none group px-3 h-8 text-xs text-red-500 hover:bg-rose-300 hover:text-black transition duration-300">
+                  <button class="book-btn relative min-w-[68px] flex items-center rounded-lg leading-none group px-3 h-8 text-xs bg-rose-300 text-black transition duration-300">
                     <span class="mr-1 text-sm">Book Now</span>
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                       <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
@@ -455,7 +455,7 @@
               </span>
               <div class="flex justify-between">
                 <div>
-                  <button class="book-btn relative min-w-[68px] flex items-center rounded-lg leading-none group px-3 h-8 text-xs text-red-500 hover:bg-rose-300 hover:text-black transition duration-300">
+                  <button class="book-btn relative min-w-[68px] flex items-center rounded-lg leading-none group px-3 h-8 text-xs bg-rose-300 text-black transition duration-300">
                     <span class="mr-1 text-sm">Book Now</span>
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                       <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
