--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                   <p>
                     Committed to create a joyous and memorable experience for kids and teenagers alike in a safe and friendly environment.
                   </p>
-                  <button class="book-btn opacity-0 mt-3 rounded-lg px-3 h-8 text-lg text-gray-900 bg-rose-300 hover:text-black transition duration-300">Book Now</button>
+                  <button class="book-btn opacity-0 mt-3 rounded-lg px-3 h-8 text-lg text-gray-900 bg-rose-300 hover:text-black transition duration-300 cursor-pointer">Book Now</button>
               </div>
           </div>
           <div class="item">
@@ -105,7 +105,7 @@
                   <p>
                     All thrill-seekers and adventure enthusiasts! Our play area is the ultimate destination for those who crave excitement and sass in equal measure.
                   </p>
-                  <button class="book-btn opacity-0 mt-3 rounded-lg px-3 h-8 text-gray-900 bg-rose-300 hover:text-black transition duration-300">Book Now</button>
+                  <button class="book-btn opacity-0 mt-3 rounded-lg px-3 h-8 text-gray-900 bg-rose-300 hover:text-black transition duration-300 cursor-pointer">Book Now</button>
               </div>
           </div>
           <div class="item">
@@ -116,7 +116,7 @@
                   <p>
                     Dive into a world of adventure and excitement that make you scream with joy, we've got it all! Our entertainment services and equipment.
                   </p>
-                  <button class="book-btn opacity-0 mt-3 rounded-lg px-3 h-8 text-gray-900 bg-rose-300 hover:text-black transition duration-300">Book Now</button>
+                  <button class="book-btn opacity-0 mt-3 rounded-lg px-3 h-8 text-gray-900 bg-rose-300 hover:text-black transition duration-300 cursor-pointer">Book Now</button>
               </div>
           </div>
           <div class="item">
@@ -127,7 +127,7 @@
                   <p>
                     Unleash your inner wild child because at our play area, boredom doesn't stand a chance! With our thrilling equipment and endless entertainment options.
                   </p>
-                  <button class="book-btn opacity-0 mt-3 rounded-lg px-3 h-8 text-gray-900 bg-rose-300 hover:text-black transition duration-300">Book Now</button>
+                  <button class="book-btn opacity-0 mt-3 rounded-lg px-3 h-8 text-gray-900 bg-rose-300 hover:text-black transition duration-300 cursor-pointer">Book Now</button>
               </div>
           </div>
       </div>
@@ -176,10 +176,6 @@
     <section id="services" class="sm:my-2 sm:py-14">
 
       <div class="container mx-auto max-w-7xl ">
-
-        <div class="absolute inset-x-0 top-96 z-10 transform-gpu overflow-hidden blur-3xl opacity-45 sm:top-[48rem]" aria-hidden="true">
-          <div class="relative left-[60%] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
-        </div>
       
         <div class="mx-auto flex flex-col items-center justify-center">
           <h2 class="font-sub text-3xl text-center font-bold tracking-tight text-gray-900 sm:text-4xl">Endless Play Possibilities</h2>
@@ -516,13 +512,13 @@
   </main>
 
   <!-- whatsApp -->
-  <div class="fixed z-[100] bottom-10 right-5">
+  <div class="fixed z-[100] bottom-4 right-2 md:bottom-10 md:right-5 flex items-center justify-center flex-col">
     <div>
-      <p class="mb-2">Chat now</p>
+      <p class="mb-2 text-sm">Chat now</p>
     </div>
     <div> 
-      <a href="https://wa.me//+27676561377" class="bg-white w-16 h-16 rounded-full flex justify-center items-center">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" fill="green" class="w-10 h-10"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7 .9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"/></svg>
+      <a href="https://wa.me//+27676561377" class="bg-white w-10 h-10 md:w-16 md:h-16 rounded-full flex justify-center items-center">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" fill="green" class="w-6 h-6"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7 .9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"/></svg>
       </a>
     </div>
   </div>
